[package]
name = "safe-task-claim"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
dirs = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
